Added a part that didn't changeI to the color changer

--- a/DiscordThemeCreator.html
+++ b/DiscordThemeCreator.html
@@ -69,6 +69,7 @@ sheet.innerHTML =
 	--textbox-markdown-syntax: #8E9297;
 	--scrollbar-auto-thumb: #202225;
 	--scrollbar-auto-track: #2E3338;
+	.container-2cd8Mz: #283e
 }`;
 document.body.appendChild(sheet);
 </text>
@@ -331,7 +332,7 @@ function result() {
 		output.textContent += "        '" + key + ": " + colors[key][0].toUpperCase() + ";'+\n";
 	}
 	output.textContent += "'}'+\n";
-	output.textContent += "'.theme-dark .container-1D34oG, .theme-light .container-1D34oG, .theme-dark .container-3ayLPN, .theme-light .container-3ayLPN, .theme-dark .uploadModal-2ifh8j, .theme-light .uploadModal-2ifh8j {'+\n"
+	output.textContent += "'.theme-dark .container-1D34oG, .theme-light .container-1D34oG, .theme-dark .container-3ayLPN, .theme-light .container-3ayLPN, .theme-dark .uploadModal-2ifh8j, .theme-light .uploadModal-2ifh8j, .theme-dark .container-2cd8Mz, .theme-light .container-2cd8Mz {'+\n"
     output.textContent += "'background-color: "+colors["--background-primary"][0].toUpperCase()+";'+\n"
 	output.textContent += "'}'+\n";
 	output.textContent += "'.theme-dark .footer-3mqk7D, .theme-light .footer-3mqk7D {'+\n"
